# cargo-vet-school

./: Cargo.toml  README.md
.github/workflows/: cargo-vet-certify.yml  cargo-vet-check-submit-failure.yml  cargo-vet-check.yml  ci.yml
.github/workflows/certify/: action.yml  certify.js  example-certs.json  package-lock.json  package.json
supply-chain/: audits.toml  config.toml
