[package]
name = "cargo-vet-school"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "4.0.15"
reqwest = { version = "0.11.12", default-features = false, features = ["rustls-tls", "gzip"] }
serde = { version = "1.0.145", features = ["derive"] }
serde_json = "1.0.86"

# Force two copies of minidump-common
minidump-common = "0.10.0"
minidump = "0.11.0"

thin-vec = "0.2.0"

[dev-dependencies]
insta = "1.21.1"
